--- a/androidApp/src/main/AndroidManifest.xml
+++ b/androidApp/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
     <uses-permission-sdk-23 android:name="android.permission.POST_NOTIFICATIONS"/>
     <application
-        android:name=".android.NoteApplication"
+        android:name=".android.BudgetKuApplication"
         android:allowBackup="false"
         android:supportsRtl="true"
         android:usesCleartextTraffic="true"
