patch: add shared pref typesafe request

--- a/gradle.properties
+++ b/gradle.properties
@@ -11,3 +11,6 @@ android.nonTransitiveRClass=true
 #MPP
 kotlin.mpp.enableCInteropCommonization=true
 kotlin.mpp.androidSourceSetLayoutVersion=2
+
+BASE_URL=http://10.64.78.222:3003
+BASE_URL_DEV=http://10.64.78.222:3003
