chore: add copyright

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
 *.iml
 .gradle
-.idea
+
+.idea/compiler.xml
+.idea/deploymentTargetDropDown.xml
+.idea/gradle.xml
+.idea/misc.xml
+.idea/vcs.xml
+.idea/workspace.xml
+
 .DS_Store
 build
 captures
