--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -33,13 +33,17 @@ android-materia={group="com.google.android.material",name="material",version="1.
 #Compose
 compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "compose-bom" }
 material3 = { group = "androidx.compose.material3", name = "material3" }
+navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version = "2.5.3" }
 ui = { group = "androidx.compose.ui", name = "ui" }
 ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
 ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
 ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
 ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version = "2.5.3" }
+
+#Robolectric
+robolectric ={group="org.robolectric",name="robolectric",version="4.7.3"}
+
 
 #Accompanist
 accompanist-pager = { group = "com.google.accompanist", name = "accompanist-pager", version.ref = "accompanist-pager" }
@@ -62,6 +66,8 @@ hilt-work = { group = "androidx.hilt", name = "hilt-work", version = "1.0.0" }
 hilt-compiler = { group = "androidx.hilt", name = "hilt-compiler", version = "1.0.0" }
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version = "2.44" }
 hilt-android-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version = "2.44" }
+hilt-android-test = {group="com.google.dagger",name="hilt-android-testing",version="2.44"}
+
 
 #androidx
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
