--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -32,7 +32,7 @@ android-materia={group="com.google.android.material",name="material",version="1.
 
 #Compose
 compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "compose-bom" }
-material3 = { group = "androidx.compose.material3", name = "material3" }
+material = { group = "androidx.compose.material", name = "material" }
 navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version = "2.5.3" }
 ui = { group = "androidx.compose.ui", name = "ui" }
 ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
