--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -26,6 +26,7 @@ desugar-lib = "2.0.2"
 firebase-bom = "31.3.0"
 kotlinx = "1.6.4"
 mockk = "1.13.4"
+composeIcons = "1.1.0"
 
 
 [libraries]
@@ -129,6 +130,18 @@ leak-canary = { group = "com.squareup.leakcanary", name = "leakcanary-android", 
 #MOckk
 mock = { group = "io.mock", name = "mockk", version.ref = "mockk" }
 mock-android = { group = "io.mock", name = "mockk-android", version.ref = "mockk" }
+
+#Icons
+composeIcons-cssGg = { module = "br.com.devsrsouza.compose.icons:css-gg", version.ref = "composeIcons" }
+composeIcons-weatherIcons = { module = "br.com.devsrsouza.compose.icons:erikflowers-weather-icons", version.ref = "composeIcons" }
+composeIcons-evaIcons = { module = "br.com.devsrsouza.compose.icons:eva-icons", version.ref = "composeIcons" }
+composeIcons-feather = { module = "br.com.devsrsouza.compose.icons:feather", version.ref = "composeIcons" }
+composeIcons-fontAwesome = { module = "br.com.devsrsouza.compose.icons:font-awesome", version.ref = "composeIcons" }
+composeIcons-lineAwesome = { module = "br.com.devsrsouza.compose.icons:line-awesome", version.ref = "composeIcons" }
+composeIcons-linea = { module = "br.com.devsrsouza.compose.icons:linea", version.ref = "composeIcons" }
+composeIcons-octicons = { module = "br.com.devsrsouza.compose.icons:octicons", version.ref = "composeIcons" }
+composeIcons-simpleIcons = { module = "br.com.devsrsouza.compose.icons:simple-icons", version.ref = "composeIcons" }
+composeIcons-tablerIcons = { module = "br.com.devsrsouza.compose.icons:tabler-icons", version.ref = "composeIcons" }
 
 [plugins]
 com-android-application = { id = "com.android.application", version.ref = "com-android-application" }
