--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -23,7 +23,7 @@ coil-compose = "2.2.2"
 compose-calendar = "1.1.1"
 wheel-picker-compose = "1.1.10"
 desugar-lib = "2.0.2"
-firebase-bom = "31.3.0"
+firebase-bom = "32.2.2"
 kotlinx = "1.6.4"
 mockk = "1.13.4"
 composeIcons = "1.1.0"
@@ -160,5 +160,6 @@ com-android-library = { id = "com.android.library", version.ref = "com-android-a
 app-cash-sqldelight = { id = "app.cash.sqldelight", version.ref = "sqldelight" }
 io-gitlab-arthubosch-detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
 
+google-services ={id="com.google.gms.google-services",version="4.3.15"}
 [bundles]
 
