feat: initial commit dev

--- a/.github/workflows/run-on-dev.yml
+++ b/.github/workflows/run-on-dev.yml
@@ -2,7 +2,7 @@ name: DEV
 
 on:
   pull_request:
-    branches: [ beta ]
+    branches: [ development ]
 
 env:
   APP_PATH: androidApp
@@ -43,6 +43,7 @@ jobs:
           echo "$ANDROID_KEYSTORE_FILE" > uwang-keystore.b64
           base64 -d -i uwang-keystore.b64 > "$SECRET_PATH"/uwang-keystore
           echo "$GRADLE_PROPERTIES" >> gradle.properties
+          echo "$GOOGLE_SERVICES" >> "APP_PATH"/gradle.properties
 
 #          echo "storeFile=../secret/uwang-keystore" >> gradle.properties
 #          echo "keyAlias=$KEYSTORE_KEY_ALIAS" >> gradle.properties
@@ -50,6 +51,8 @@ jobs:
 #          echo "keyPassword=$KEYSTORE_KEY_PASSWORD" >> gradle.properties
         env:
           ANDROID_KEYSTORE_FILE: ${{ secrets.ANDROID_KEYSTORE_FILE }}
+          GOOGLE_SERVICES: ${{ secrets.GOOGLE_SERVICES }}
+          GRADLE_PROPERTIES: ${{ secrets.GRADLE_PROPERTIES }}
 #          KEYSTORE_KEY_ALIAS: ${{ secrets.KEYSTORE_KEY_ALIAS }}
 #          KEYSTORE_KEY_PASSWORD: ${{ secrets.KEYSTORE_KEY_PASSWORD }}
 #          KEYSTORE_STORE_PASSWORD: ${{ secrets.KEYSTORE_STORE_PASSWORD }}
