--- a/.github/workflows/run-on-dev.yml
+++ b/.github/workflows/run-on-dev.yml
@@ -34,10 +34,10 @@ jobs:
       - name: Make Gradle executable
         run: chmod +x ./gradlew
 
-      - name: Install bundle
-        run: |
-          bundle config path vendor/bundle
-          bundle install --jobs 4 --retry 3
+#      - name: Install bundle
+#        run: |
+#          bundle config path vendor/bundle
+#          bundle install --jobs 4 --retry 3
       - name: Configure Keystore
         run: |
           echo "$ANDROID_KEYSTORE_FILE" > uwang-keystore.b64
