--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -1,49 +1,36 @@
 [versions]
-com-android-application = "7.4.2"
+com-android-application = "8.2.0"
 detekt = "1.22.0"
-hilt = "2.44"
+hilt = "2.48.1"
 kotlin = "1.8.0"
-core-ktx = "1.9.0"
+core-ktx = "1.12.0"
 junit = "4.13.2"
 androidx-test-ext-junit = "1.1.5"
 espresso-core = "3.5.1"
-lifecycle-runtime-ktx = "2.6.1"
-activity-compose = "1.7.0"
-compose-bom = "2023.03.00"
+lifecycle-runtime-ktx = "2.6.2"
+activity-compose = "1.8.1"
+compose-bom = "2023.10.01"
 base-name-space = "com.bluhabit.blu"
 namespace = "com.bluhabit.blu"
 application-id="com.bluhabit.blu.android"
-ktor = "2.2.3"
+ktor = "2.3.5"
 sqldelight = "2.0.0-alpha05"
-accompanist-pager = "0.28.0"
-accompanist-flow = "0.28.0"
-accompanist-shimmer = "0.30.0"
-chucker = "3.5.2"
-coil-compose = "2.2.2"
+chucker = "4.0.0"
+coil-compose = "2.4.0"
 compose-calendar = "1.1.1"
 wheel-picker-compose = "1.1.10"
-desugar-lib = "2.0.2"
-firebase-bom = "32.2.2"
-kotlinx = "1.6.4"
-mockk = "1.13.4"
-composeIcons = "1.1.0"
+desugar-lib = "2.0.4"
+firebase-bom = "32.7.0"
+kotlinx = "1.7.3"
 
 
 [libraries]
-android-material={group="com.google.android.material",name="material",version="1.8.0"}
-
-#RROM
-room={group="androidx.room",name="room-runtime",version="2.5.2"}
-room-compiler={group="androidx.room",name="room-compiler",version="2.5.2"}
-
-#MVI
-mvi-ui={group="com.github.triandamai.mvi",name="ui",version="0.18"}
-mvi-processor={group="com.github.triandamai.mvi",name="processor",version="0.18"}
+android-material={group="com.google.android.material",name="material",version="1.10.0"}
 
 #Compose
 compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "compose-bom" }
 compose-material = { group = "androidx.compose.material", name = "material" }
-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version = "2.6.0" }
+navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version = "2.7.5" }
 ui = { group = "androidx.compose.ui", name = "ui" }
 ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
 ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
@@ -53,12 +40,6 @@ ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 
 #Robolectric
 robolectric ={group="org.robolectric",name="robolectric",version="4.7.3"}
-
-#Accompanist
-accompanist-pager = { group = "com.google.accompanist", name = "accompanist-pager", version.ref = "accompanist-pager" }
-accompanist-pager-indicator = { group = "com.google.accompanist", name = "accompanist-pager-indicators", version.ref = "accompanist-pager" }
-accompanist-flow-layout = { group = "com.google.accompanist", name = "accompanist-flowlayout", version.ref = "accompanist-flow" }
-accompanist-shimmer = { group = "com.google.accompanist", name = "accompanist-placeholder-material", version.ref = "accompanist-shimmer" }
 
 #Coil
 coil-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil-compose" }
@@ -70,22 +51,23 @@ compose-calendar = { group = "io.github.boguszpawlowski.composecalendar", name =
 wheel-picker-compose = { group = "com.github.commandiron", name = "WheelPickerCompose", version.ref = "wheel-picker-compose" }
 
 #hilt
-hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version = "1.0.0" }
-hilt-work = { group = "androidx.hilt", name = "hilt-work", version = "1.0.0" }
-hilt-compiler = { group = "androidx.hilt", name = "hilt-compiler", version = "1.0.0" }
-hilt-android = { group = "com.google.dagger", name = "hilt-android", version = "2.44" }
-hilt-android-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version = "2.44" }
+hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version = "1.1.0" }
+hilt-work = { group = "androidx.hilt", name = "hilt-work", version = "1.1.0" }
+hilt-compiler = { group = "androidx.hilt", name = "hilt-compiler", version = "1.1.0" }
+hilt-android = { group = "com.google.dagger", name = "hilt-android", version = "2.48.1" }
+hilt-android-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version = "2.48.1" }
 hilt-android-test = {group="com.google.dagger",name="hilt-android-testing",version="2.44"}
 
 
 #androidx
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
 lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycle-runtime-ktx" }
+lifecycle-runtime-compose = { group = "androidx.lifecycle", name = "lifecycle-runtime-compose", version="2.6.2" }
 activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activity-compose" }
 multidex = { group = "androidx.multidex", name = "multidex", version = "2.0.1" }
 
 #Worker
-work-runtime = { group = "androidx.work", name = "work-runtime-ktx", version = "2.8.1" }
+work-runtime = { group = "androidx.work", name = "work-runtime-ktx", version = "2.9.0" }
 
 #Firebase
 firebase-bom = { group = "com.google.firebase", name = "firebase-bom", version.ref = "firebase-bom" }
@@ -96,7 +78,7 @@ firebase-analytics = { group = "com.google.firebase", name = "firebase-analytics
 firebase-crashanalytics = { group = "com.google.firebase", name = "firebase-crashanalytics-ktx" }
 
 #GMS
-gms-play-service-auth = { group = "com.google.android.gms", name = "play-services-auth", version = "20.4.1" }
+gms-play-service-auth = { group = "com.google.android.gms", name = "play-services-auth", version = "20.7.0" }
 gms-play-service-base = { group = "com.google.android.gms", name = "play-services-base", version = "18.2.0" }
 
 #Ktor
@@ -114,16 +96,13 @@ sqldelight-android-driver = { group = "app.cash.sqldelight", name = "android-dri
 chuker-debug = { group = "com.github.chuckerteam.chucker", name = "library", version.ref = "chucker" }
 chuker-release = { group = "com.github.chuckerteam.chucker", name = "library-no-op", version.ref = "chucker" }
 
-#Android Mp Chart
-mp-android-chart = { group = "com.github.PhilJay", name = "MPAndroidChart", version = "v3.1.0" }
-
 #DesugarLib
 desugar-jdk-lib = { group = "com.android.tools", name = "desugar_jdk_libs", version.ref = "desugar-lib" }
 
 #Kotlinx
 kotlinx-coroutine-android = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "kotlinx" }
 kotlinx-coroutine-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "kotlinx" }
-kotlinx-coroutine-play-services = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-play-services", version="1.6.4" }
+kotlinx-coroutine-play-services = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-play-services", version="1.7.1" }
 kotlinx-coroutine-test = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-test", version="1.6.4" }
 
 #Test
@@ -133,22 +112,6 @@ espresso-core = { group = "androidx.test.espresso", name = "espresso-core", vers
 
 #Leak canary
 leak-canary = { group = "com.squareup.leakcanary", name = "leakcanary-android", version = "2.10" }
-
-#MOckk
-mock = { group = "io.mock", name = "mockk", version.ref = "mockk" }
-mock-android = { group = "io.mock", name = "mockk-android", version.ref = "mockk" }
-
-#Icons
-composeIcons-cssGg = { module = "br.com.devsrsouza.compose.icons:css-gg", version.ref = "composeIcons" }
-composeIcons-weatherIcons = { module = "br.com.devsrsouza.compose.icons:erikflowers-weather-icons", version.ref = "composeIcons" }
-composeIcons-evaIcons = { module = "br.com.devsrsouza.compose.icons:eva-icons", version.ref = "composeIcons" }
-composeIcons-feather = { module = "br.com.devsrsouza.compose.icons:feather", version.ref = "composeIcons" }
-composeIcons-fontAwesome = { module = "br.com.devsrsouza.compose.icons:font-awesome", version.ref = "composeIcons" }
-composeIcons-lineAwesome = { module = "br.com.devsrsouza.compose.icons:line-awesome", version.ref = "composeIcons" }
-composeIcons-linea = { module = "br.com.devsrsouza.compose.icons:linea", version.ref = "composeIcons" }
-composeIcons-octicons = { module = "br.com.devsrsouza.compose.icons:octicons", version.ref = "composeIcons" }
-composeIcons-simpleIcons = { module = "br.com.devsrsouza.compose.icons:simple-icons", version.ref = "composeIcons" }
-composeIcons-tablerIcons = { module = "br.com.devsrsouza.compose.icons:tabler-icons", version.ref = "composeIcons" }
 
 [plugins]
 com-android-application = { id = "com.android.application", version.ref = "com-android-application" }
