--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -22,6 +22,8 @@ wheel-picker-compose = "1.1.10"
 desugar-lib = "2.0.4"
 firebase-bom = "32.7.0"
 kotlinx = "1.7.3"
+ui-unit-android = "1.5.4"
+foundation-android = "1.5.4"
 
 
 [libraries]
@@ -112,6 +114,8 @@ espresso-core = { group = "androidx.test.espresso", name = "espresso-core", vers
 
 #Leak canary
 leak-canary = { group = "com.squareup.leakcanary", name = "leakcanary-android", version = "2.10" }
+androidx-ui-unit-android = { group = "androidx.compose.ui", name = "ui-unit-android", version.ref = "ui-unit-android" }
+androidx-foundation-android = { group = "androidx.compose.foundation", name = "foundation-android", version.ref = "foundation-android" }
 
 [plugins]
 com-android-application = { id = "com.android.application", version.ref = "com-android-application" }
