feat: working on logic sign up

--- a/.github/workflows/run-on-staging.yml
+++ b/.github/workflows/run-on-staging.yml
@@ -51,4 +51,4 @@ jobs:
         run: ./gradlew detekt
 
       - name: Build with Gradle
-        run: ./gradlew  assembleDebug appDistributionUploadStagingDebug --stacktrace
+        run: ./gradlew  assembleStagingDebug appDistributionUploadStagingDebug --stacktrace
