feat: fixing code smell from linter

--- a/androidApp/src/main/AndroidManifest.xml
+++ b/androidApp/src/main/AndroidManifest.xml
@@ -28,7 +28,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
-        tools:ignore="DataExtractionRules">
+        tools:ignore="DataExtractionRules"
+        >
         <activity
             android:name="com.bluhabit.blu.android.MainActivity"
             android:exported="true"
